Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18025

Mariabackup fails to detect corrupted page_compressed=1 tables

    XMLWordPrintable

Details

    Description

      Even with the MDEV-12112 fix, Mariabackup seems to fail to verify the pages of page_compressed=1 tables. The reason is that both fil_space_verify_crypt_checksum() and buf_page_is_corrupted() will skip the validation for such pages. We should call fil_page_decompress(), similar to the one that is performed in buf_dblwr_process().

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              marko Marko Mäkelä
              Votes:
              1 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1d Original Estimate - 1d
                  1d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.75d
                  2.75d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.